dev/postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: protostar-postgres-headless
  namespace: service
  labels:
    app: protostar
    tier: postgres
spec:
  clusterIP: None
  selector:
    app: protostar
    tier: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
