dev/httproutes_dev.yaml
# httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: service
spec:
  parentRefs:
  - name: protostar-gateway
  hostnames:
  - "protostar-frontend.local"
  rules:
  - backendRefs:
    - name: protostar-frontend-service
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nest-route
  namespace: service
spec:
  parentRefs:
  - name: protostar-gateway
  hostnames:
  - "protostar-api.local"
  rules:
  - backendRefs:
    - name: protostar-nest-service
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastapi-route
  namespace: service
spec:
  parentRefs:
  - name: protostar-gateway
  hostnames:
  - "protostar-ai.local"
  rules:
  - backendRefs:
    - name: protostar-fastapi-service
      port: 8000
